--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ cffi==1.15.1
 charset-normalizer==3.2.0
 cryptography==41.0.3
 defusedxml==0.7.1
+dj-database-url==2.1.0
 Django==4.2.4
 django-cors-headers==4.2.0
 django-filter==23.2
@@ -25,5 +26,6 @@ requests==2.31.0
 requests-oauthlib==1.3.1
 six==1.16.0
 sqlparse==0.4.4
+typing_extensions==4.7.1
 urllib3==2.0.4
 whitenoise==6.5.0
