--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ idna==3.4
 Markdown==3.4.4
 oauthlib==3.2.2
 packaging==23.1
+psycopg==3.1.10
 pycparser==2.21
 PyJWT==1.7.1
 python-dateutil==2.8.2
