--- a/requirements.txt
+++ b/requirements.txt
@@ -76,7 +76,7 @@ django-tinymce==3.6.1
 django-widget-tweaks==1.5.0
 djangorestframework==3.14.0
 djangorestframework-jwt==1.11.0
-djangorestframework-simplejwt==5.3.0
+djangorestframework-simplejwt
 djoser==2.1.0
 drf-nested-routers==0.93.4
 entrypoints==0.4
