--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ defusedxml==0.7.1
 dj-database-url==2.1.0
 Django==4.2.4
 django-cors-headers==4.2.0
+django-environ==0.11.2
 django-filter==23.2
 django-storages==1.14.2
 djangorestframework==3.14.0
