--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,7 @@ requests-oauthlib==1.3.1
 s3transfer==0.8.0
 six==1.16.0
 sqlparse==0.4.4
+stripe==2.66.0
 typing_extensions==4.7.1
 urllib3==2.0.4
 whitenoise==6.5.0
