--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ django-cors-headers==4.2.0
 django-environ==0.11.2
 django-filter==23.2
 django-storages==1.14.2
+django-ses==3.5.2
 djangorestframework==3.14.0
 djangorestframework-jwt==1.11.0
 djangorestframework-simplejwt==5.3.0
