bfa-25 set up secret to get db url

--- a/.github/workflows/deploy-production.yaml
+++ b/.github/workflows/deploy-production.yaml
@@ -25,6 +25,15 @@ jobs:
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
 
+      # --- Fetch Secret from GCP Secret Manager ---
+      - name: Get DATABASE_URL from Secret Manager
+        id: db_url_secret # Give it an ID to reference its outputs
+        uses: google-github-actions/get-secretmanager-secrets@v2
+        with:
+          secrets: |- # Use |- for multi-line input if fetching multiple secrets
+            DB_URL_FROM_GCP:${{ secrets.GCP_DB_URL_SECRET_NAME }} # Maps secret to an output name
+
+
       - name: Set up Cloud SDK
         uses: google-github-actions/setup-gcloud@v2
 
