--- a/.github/workflows/deploy-production.yaml
+++ b/.github/workflows/deploy-production.yaml
@@ -31,7 +31,7 @@ jobs:
         uses: google-github-actions/get-secretmanager-secrets@v2
         with:
           secrets: |- # Use |- for multi-line input if fetching multiple secrets
-            DB_URL_FROM_GCP:${{ secrets.GCP_DB_URL_SECRET_NAME }} # Maps secret to an output name
+            DB_URL_FROM_GCP:${{ secrets.GCP_DB_URL_SECRET_NAME }}
 
 
       - name: Set up Cloud SDK
@@ -66,4 +66,4 @@ jobs:
       - name: Print Image URL
         run: |
           echo "Image pushed to:"
-          echo "${{ steps.meta.outputs.tags }}" # This will print all generated tags/image names
+          echo "${{ steps.meta.outputs.tags }}"
