--- a/.github/workflows/deploy-production.yaml
+++ b/.github/workflows/deploy-production.yaml
@@ -55,7 +55,11 @@ jobs:
 
       - name: Debug Build Arg Value
         run: |
-          echo "Value for DATABASE_URL_ARG will be: '${{ steps.db_url_secret.outputs.DB_URL_FROM_GCP }}'"
+          echo "Value for DATABASE_URL_ARG will be (raw):"
+          # This attempts to print it as-is, which might be problematic if it has newlines
+          # but should be okay for a typical URL.
+          echo "${{ steps.db_url_secret.outputs.DB_URL_FROM_GCP }}"
+          echo "--- End of raw value ---"
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
