bfa-25 fix type in pipeline yaml

--- a/.github/workflows/deploy-production.yaml
+++ b/.github/workflows/deploy-production.yaml
@@ -35,7 +35,7 @@ jobs:
             AWS_ACCESS_KEY_ID_FROM_GCP:${{ secrets.GCP_AWS_ACCESS_KEY_ID }}
             AWS_SECRET_ACCESS_KEY_FROM_GCP:${{ secrets.GCP_AWS_SECRET_ACCESS_KEY }}
             AWS_STORAGE_BUCKET_NAME_FROM_GCP:${{ secrets.GCP_AWS_STORAGE_BUCKET_NAME }}
-            AWS_S3_REGION_NAME_FROM_GCP:${{ secrets.GCP_DB_AWS_S3_REGION_NAME }}
+            AWS_S3_REGION_NAME_FROM_GCP:${{ secrets.GCP_AWS_S3_REGION_NAME }}
             AWS_S3_CUSTOM_DOMAIN_FROM_GCP:${{ secrets.GCP_AWS_S3_CUSTOM_DOMAIN }}
             AWS_CLOUDFRONT_KEY_ID_FROM_GCP:${{ secrets.GCP_AWS_CLOUDFRONT_KEY_ID }}
             AWS_CLOUDFRONT_KEY_FROM_GCP:${{ secrets.GCP_AWS_CLOUDFRONT_KEY }}
