bfa-91 set resource request and limits

--- a/rule4be/k8s/production/deployment.yaml
+++ b/rule4be/k8s/production/deployment.yaml
@@ -46,11 +46,12 @@ spec:
         #   periodSeconds: 20
         #   timeoutSeconds: 5
         #   failureThreshold: 3
+        
         # --- Resource Requests and Limits (Highly Recommended for Production) ---
-        # resources:
-        #   requests:
-        #     memory: "256Mi"
-        #     cpu: "250m" # 0.25 CPU core
-        #   limits:
-        #     memory: "512Mi"
-        #     cpu: "500m" # 0.5 CPU core
+        resources:
+          requests:
+            memory: "256Mi"
+            cpu: "250m" # 0.25 CPU core
+          limits:
+            memory: "512Mi"
+            cpu: "500m" # 0.5 CPU core
